Fixed alignment of logo

--- a/New AGS layout/css/index.css
+++ b/New AGS layout/css/index.css
@@ -75,6 +75,7 @@ body{
 
 }
 
+
 .jumbo-2{
     display:flex;
     justify-content: center;
@@ -345,7 +346,14 @@ body{
     color:#fff;
     font-size:1.4rem;
     font-weight: 500;
-    padding-left:1rem;
+    /* padding-left:1rem; */
+    
+}
+
+.navbar-brand{
+  padding-top: 0;
+  padding-bottom: 0;
+  
 }
 
 
